@@ -94,3 +94,15 @@ site.exp: Makefile
 	@-rm -f site.bak
 	@test ! -f site.exp || mv site.exp site.bak
 	@mv site.tmp site.exp
+
+## ---------- ##
+## Cleaning.  ##
+## ---------- ##
+
+.PHONY distclean-am: distclean-DEJAGNU
+
+distclean-DEJAGNU:
+## Any other cleaning must be done by the user or by the test suite
+## itself.  We can't predict what dejagnu or the test suite might
+## generate.
+	-rm -f site.exp site.bak
