@@ -1,3 +1,8 @@
+2002-04-26  Tom Tromey  <tromey@redhat.com>
+
+	* lib/am/dejagnu.am (distclean-DEJAGNU): New target.
+	For Debian bug 14421.
+
 2002-04-26  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* tests/man2.test: Use `pwd`, not $PWD.  Use $MAKE -e.
